# serializer version: 1
# name: test_make_compat_calendar_labs[calendar_labs_same_day_dtend]
  '''
  BEGIN:VCALENDAR
  CALSCALE:GREGORIAN
  METHOD:PUBLISH
  PRODID:-//Calendar Labs//Calendar 1.0//EN
  VERSION:2.0
  X-WR-CALNAME:Spain Holidays
  X-WR-TIMEZONE:UTC
  BEGIN:VEVENT
  DTSTAMP:20251206T105424Z
  UID:q4bugdkb4@calendarlabs.com
  DTSTART:20251208
  DTEND:20251209
  SUMMARY:Immaculate Conception Day
  CLASS:PUBLIC
  DESCRIPTION:Visit 
   https://calendarlabs.com/holidays/spain/immaculate-conception-day.php to 
   know more about Immaculate Conception Day. 
  PRIORITY:5
  SEQUENCE:0
  STATUS:CONFIRMED
  TRANSP:TRANSPARENT
  X-MICROSOFT-CDO-IMPORTANCE:1
  END:VEVENT
  END:VCALENDAR
  '''
# ---
# name: test_make_compat_office[office_356_custom_timezone]
  '''
  BEGIN:VCALENDAR
  METHOD:PUBLISH
  PRODID:Microsoft Exchange Server 2010
  VERSION:2.0
  X-WR-CALNAME:Kalendarz
  BEGIN:VEVENT
  DTSTAMP:20250508T124800Z
  UID:040000008200E00074C5B7101A82E0080000000032281124038FDA01000000000000000
   010000000BE5193C6B024BB458D91AD30FFFD71BF
  DTSTART;TZID=Europe/Warsaw:20240502T110000
  DTEND;TZID=Europe/Warsaw:20240502T120000
  SUMMARY:Zajęty
  CLASS:PUBLIC
  PRIORITY:5
  RRULE:FREQ=WEEKLY;UNTIL=20240502T090000Z;INTERVAL=2;BYDAY=TH;WKST=SU
  SEQUENCE:46
  STATUS:CONFIRMED
  TRANSP:OPAQUE
  X-MICROSOFT-CDO-APPT-SEQUENCE:46
  X-MICROSOFT-CDO-BUSYSTATUS:BUSY
  X-MICROSOFT-CDO-INTENDEDSTATUS:BUSY
  X-MICROSOFT-CDO-ALLDAYEVENT:FALSE
  X-MICROSOFT-CDO-IMPORTANCE:1
  X-MICROSOFT-CDO-INSTTYPE:1
  X-MICROSOFT-DONOTFORWARDMEETING:FALSE
  X-MICROSOFT-DISALLOW-COUNTER:FALSE
  X-MICROSOFT-REQUESTEDATTENDANCEMODE:DEFAULT
  X-MICROSOFT-ISRESPONSEREQUESTED:FALSE
  END:VEVENT
  BEGIN:VEVENT
  DTSTAMP:20250508T124800Z
  UID:040000008200E00074C5B7101A82E0080000000088E248D3DC4EDA01000000000000000
   010000000FC71CD8C02E70C40B4D15EB1417E2150
  DTSTART;TZID=Europe/Warsaw:20240521T150000
  DTEND;TZID=Europe/Warsaw:20240521T160000
  SUMMARY:Wstępna akceptacja
  CLASS:PUBLIC
  PRIORITY:5
  RRULE:FREQ=WEEKLY;UNTIL=20260505T130000Z;INTERVAL=2;BYDAY=TU;WKST=SU
  EXDATE;TZID=Europe/Warsaw:20241231T150000
  EXDATE;TZID=Europe/Warsaw:20250225T150000
  SEQUENCE:5
  STATUS:CONFIRMED
  TRANSP:OPAQUE
  X-MICROSOFT-CDO-APPT-SEQUENCE:5
  X-MICROSOFT-CDO-BUSYSTATUS:TENTATIVE
  X-MICROSOFT-CDO-INTENDEDSTATUS:BUSY
  X-MICROSOFT-CDO-ALLDAYEVENT:FALSE
  X-MICROSOFT-CDO-IMPORTANCE:1
  X-MICROSOFT-CDO-INSTTYPE:1
  X-MICROSOFT-DONOTFORWARDMEETING:FALSE
  X-MICROSOFT-DISALLOW-COUNTER:FALSE
  X-MICROSOFT-REQUESTEDATTENDANCEMODE:DEFAULT
  X-MICROSOFT-ISRESPONSEREQUESTED:FALSE
  END:VEVENT
  BEGIN:VTIMEZONE
  TZID:Central European Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T030000
  TZOFFSETTO:+0100
  TZOFFSETFROM:+0200
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=10
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T020000
  TZOFFSETTO:+0200
  TZOFFSETFROM:+0100
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=3
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:Eastern Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T020000
  TZOFFSETTO:-0500
  TZOFFSETFROM:-0400
  RRULE:FREQ=YEARLY;BYDAY=1SU;BYMONTH=11
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T020000
  TZOFFSETTO:-0400
  TZOFFSETFROM:-0500
  RRULE:FREQ=YEARLY;BYDAY=2SU;BYMONTH=3
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:Customized Time Zone
  BEGIN:STANDARD
  DTSTART:16010101T030000
  TZOFFSETTO:+0100
  TZOFFSETFROM:+0200
  RRULE:FREQ=YEARLY;BYDAY=4SU;BYMONTH=10
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T020000
  TZOFFSETTO:+0200
  TZOFFSETFROM:+0100
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=3
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:South Africa Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T000000
  TZOFFSETTO:+0200
  TZOFFSETFROM:+0200
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T000000
  TZOFFSETTO:+0200
  TZOFFSETFROM:+0200
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:Greenwich Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T000000
  TZOFFSETTO:+0000
  TZOFFSETFROM:+0000
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T000000
  TZOFFSETTO:+0000
  TZOFFSETFROM:+0000
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:Turkey Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T000000
  TZOFFSETTO:+0300
  TZOFFSETFROM:+0300
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T000000
  TZOFFSETTO:+0300
  TZOFFSETFROM:+0300
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:GMT Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T020000
  TZOFFSETTO:+0000
  TZOFFSETFROM:+0100
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=10
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T010000
  TZOFFSETTO:+0100
  TZOFFSETFROM:+0000
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=3
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:SE Asia Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T000000
  TZOFFSETTO:+0700
  TZOFFSETFROM:+0700
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T000000
  TZOFFSETTO:+0700
  TZOFFSETFROM:+0700
  END:DAYLIGHT
  END:VTIMEZONE
  END:VCALENDAR
  '''
# ---
# name: test_make_compat_office[office_360_nz_tz]
  '''
  BEGIN:VCALENDAR
  METHOD:PUBLISH
  PRODID:Microsoft Exchange Server 2010
  VERSION:2.0
  X-WR-CALNAME:Test Calendar
  BEGIN:VEVENT
  DTSTAMP:20260316T024757Z
  UID:040000008200E00074C5B7101A82E008000000004315635C6F36DC01000000000000000
   010000000B1326A1B0D78AA40AC7A9BFA204E7D84
  DTSTART;TZID=Pacific/Auckland:20251008T090000
  DTEND;TZID=Pacific/Auckland:20251008T093000
  SUMMARY:9am local Wednesday event
  CLASS:PUBLIC
  DESCRIPTION:\n
  LOCATION:
  PRIORITY:5
  SEQUENCE:0
  STATUS:CONFIRMED
  TRANSP:OPAQUE
  X-MICROSOFT-CDO-APPT-SEQUENCE:0
  X-MICROSOFT-CDO-BUSYSTATUS:BUSY
  X-MICROSOFT-CDO-INTENDEDSTATUS:BUSY
  X-MICROSOFT-CDO-ALLDAYEVENT:FALSE
  X-MICROSOFT-CDO-IMPORTANCE:1
  X-MICROSOFT-CDO-INSTTYPE:0
  X-MICROSOFT-DONOTFORWARDMEETING:FALSE
  X-MICROSOFT-DISALLOW-COUNTER:FALSE
  X-MICROSOFT-REQUESTEDATTENDANCEMODE:DEFAULT
  X-MICROSOFT-ISRESPONSEREQUESTED:FALSE
  END:VEVENT
  BEGIN:VEVENT
  DTSTAMP:20260316T024757Z
  UID:040000008200E00074C5B7101A82E00800000000A3A1AC446F36DC01000000000000000
   01000000097920E80651A0D4C9EDF833E207E13FB
  DTSTART;TZID=Pacific/Auckland:20251011T100000
  DTEND;TZID=Pacific/Auckland:20251011T103000
  SUMMARY:10am local time Saturday event
  CLASS:PUBLIC
  DESCRIPTION:\n
  LOCATION:
  PRIORITY:5
  SEQUENCE:0
  STATUS:CONFIRMED
  TRANSP:OPAQUE
  X-MICROSOFT-CDO-APPT-SEQUENCE:0
  X-MICROSOFT-CDO-BUSYSTATUS:BUSY
  X-MICROSOFT-CDO-INTENDEDSTATUS:BUSY
  X-MICROSOFT-CDO-ALLDAYEVENT:FALSE
  X-MICROSOFT-CDO-IMPORTANCE:1
  X-MICROSOFT-CDO-INSTTYPE:0
  X-MICROSOFT-DONOTFORWARDMEETING:FALSE
  X-MICROSOFT-DISALLOW-COUNTER:FALSE
  X-MICROSOFT-REQUESTEDATTENDANCEMODE:DEFAULT
  X-MICROSOFT-ISRESPONSEREQUESTED:FALSE
  END:VEVENT
  BEGIN:VEVENT
  DTSTAMP:20260316T024757Z
  UID:040000008200E00074C5B7101A82E0080000000071C48578726CDC01000000000000000
   0100000008536E39E1B45944A917EC805E19046FE
  DTSTART;TZID=Pacific/Auckland:20251208T150000
  DTEND;TZID=Pacific/Auckland:20251208T153000
  SUMMARY:Recurring event on Monday\, Wednesday
  CLASS:PUBLIC
  DESCRIPTION:\n
  LOCATION:
  PRIORITY:5
  RRULE:FREQ=WEEKLY;UNTIL=20260601T030000Z;BYDAY=MO,WE;WKST=MO
  SEQUENCE:0
  STATUS:CONFIRMED
  TRANSP:OPAQUE
  X-MICROSOFT-CDO-APPT-SEQUENCE:0
  X-MICROSOFT-CDO-BUSYSTATUS:BUSY
  X-MICROSOFT-CDO-INTENDEDSTATUS:BUSY
  X-MICROSOFT-CDO-ALLDAYEVENT:FALSE
  X-MICROSOFT-CDO-IMPORTANCE:1
  X-MICROSOFT-CDO-INSTTYPE:1
  X-MICROSOFT-DONOTFORWARDMEETING:FALSE
  X-MICROSOFT-DISALLOW-COUNTER:FALSE
  X-MICROSOFT-REQUESTEDATTENDANCEMODE:DEFAULT
  X-MICROSOFT-ISRESPONSEREQUESTED:FALSE
  END:VEVENT
  BEGIN:VTIMEZONE
  TZID:New Zealand Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T030000
  TZOFFSETTO:+1200
  TZOFFSETFROM:+1300
  RRULE:FREQ=YEARLY;BYDAY=1SU;BYMONTH=4
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T020000
  TZOFFSETTO:+1300
  TZOFFSETFROM:+1200
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=9
  END:DAYLIGHT
  END:VTIMEZONE
  END:VCALENDAR
  '''
# ---
# name: test_make_compat_office[office_365_extended_timezone]
  '''
  BEGIN:VCALENDAR
  METHOD:PUBLISH
  PRODID:Microsoft Exchange Server 2010
  VERSION:2.0
  X-WR-CALNAME:Kalender
  BEGIN:VEVENT
  DTSTAMP:20250417T155647Z
  UID:040000008200E00074C5B7101A82E00800000000687C546B5596DA01000000000000000
   010000000309AE93C8C3A94489F90ADBEA30C2F2B
  DTSTART;TZID=Europe/Berlin:20240426T140000
  DTEND;TZID=Europe/Berlin:20240426T150000
  SUMMARY:Uffe
  CLASS:PUBLIC
  LOCATION:
  PRIORITY:5
  SEQUENCE:0
  STATUS:CONFIRMED
  TRANSP:OPAQUE
  X-MICROSOFT-CDO-APPT-SEQUENCE:0
  X-MICROSOFT-CDO-BUSYSTATUS:BUSY
  X-MICROSOFT-CDO-INTENDEDSTATUS:BUSY
  X-MICROSOFT-CDO-ALLDAYEVENT:FALSE
  X-MICROSOFT-CDO-IMPORTANCE:1
  X-MICROSOFT-CDO-INSTTYPE:0
  X-MICROSOFT-DONOTFORWARDMEETING:FALSE
  X-MICROSOFT-DISALLOW-COUNTER:FALSE
  X-MICROSOFT-REQUESTEDATTENDANCEMODE:DEFAULT
  X-MICROSOFT-ISRESPONSEREQUESTED:FALSE
  END:VEVENT
  END:VCALENDAR
  '''
# ---
# name: test_make_compat_office[office_365_invalid_timezone]
  '''
  BEGIN:VCALENDAR
  METHOD:PUBLISH
  PRODID:Microsoft Exchange Server 2010
  VERSION:2.0
  X-WR-CALNAME:Kalender
  BEGIN:VEVENT
  DTSTAMP:20250417T155647Z
  UID:040000008200E00074C5B7101A82E00800000000687C546B5596DA01000000000000000
   010000000309AE93C8C3A94489F90ADBEA30C2F2B
  DTSTART:20240426T140000
  DTEND:20240426T150000
  SUMMARY:Uffe
  CLASS:PUBLIC
  LOCATION:
  PRIORITY:5
  SEQUENCE:0
  STATUS:CONFIRMED
  TRANSP:OPAQUE
  X-MICROSOFT-CDO-APPT-SEQUENCE:0
  X-MICROSOFT-CDO-BUSYSTATUS:BUSY
  X-MICROSOFT-CDO-INTENDEDSTATUS:BUSY
  X-MICROSOFT-CDO-ALLDAYEVENT:FALSE
  X-MICROSOFT-CDO-IMPORTANCE:1
  X-MICROSOFT-CDO-INSTTYPE:0
  X-MICROSOFT-DONOTFORWARDMEETING:FALSE
  X-MICROSOFT-DISALLOW-COUNTER:FALSE
  X-MICROSOFT-REQUESTEDATTENDANCEMODE:DEFAULT
  X-MICROSOFT-ISRESPONSEREQUESTED:FALSE
  END:VEVENT
  BEGIN:VTIMEZONE
  TZID:W. Europe Standard Time
  BEGIN:STANDARD
  DTSTART:16010101T030000
  TZOFFSETTO:+0100
  TZOFFSETFROM:+0200
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=10
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T020000
  TZOFFSETTO:+0200
  TZOFFSETFROM:+0100
  RRULE:FREQ=YEARLY;BYDAY=-1SU;BYMONTH=3
  END:DAYLIGHT
  END:VTIMEZONE
  BEGIN:VTIMEZONE
  TZID:UTC
  BEGIN:STANDARD
  DTSTART:16010101T000000
  TZOFFSETTO:+0000
  TZOFFSETFROM:+0000
  END:STANDARD
  BEGIN:DAYLIGHT
  DTSTART:16010101T000000
  TZOFFSETTO:+0000
  TZOFFSETFROM:+0000
  END:DAYLIGHT
  END:VTIMEZONE
  END:VCALENDAR
  '''
# ---
